nextcloud-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  labels:
    app: nextcloud
spec:
  ports:
    - port: 80
  selector:
    app: nextcloud
    tier: frontend
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  labels:
    app: nextcloud
spec:
  selector:
    matchLabels:
      app: nextcloud
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nextcloud
        tier: frontend
    spec:
      containers:
        - image: nextcloud:apache
          name: nextcloud
          ports:
            - containerPort: 80
              name: nextcloud
          volumeMounts:
            - name: nextcloud-persistent-main-storage
              mountPath: /var/www/html
            - name: nextcloud-persistent-data-storage
              mountPath: /var/www/html/data
      volumes:
        - name: nextcloud-persistent-main-storage
          persistentVolumeClaim:
            claimName: nc-pv-main-claim
        - name: nextcloud-persistent-data-storage
          persistentVolumeClaim:
            claimName: nextcloud-data-pvc
